--- a/v2/index.html
+++ b/v2/index.html
@@ -689,6 +689,9 @@ text-decoration: underline;
 #posts .post > div{
 align-items: center;
 }
+#titlebar.sticky{
+    background-color: #FFF;
+}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
