--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -77,8 +77,8 @@ document.addEventListener("DOMContentLoaded", function () {
     }
   });
 
-  var navLinks = $('nav a');
-  var navBar = $('nav');
+  var navLinks = $('.navi nav a');
+  var navBar = $('.navi nav');
   var offsetValue = 36;
   var isScrolling = false;
 
