--- a/v2/index.html
+++ b/v2/index.html
@@ -76,8 +76,8 @@
     }
   });
 
-  var navLinks = $('nav a');
-  var navBar = $('nav');
+  var navLinks = $('.navi nav a');
+  var navBar = $('.navi nav');
   var offsetValue = 36;
   var isScrolling = false;
 
