--- a/v2/about.html
+++ b/v2/about.html
@@ -524,9 +524,8 @@ z-index: 100;
     max-width: 668px;
     margin-bottom: 16px;
     }
-    .segment p:only-of-type,
-.segment p:last-of-type{
-margin-bottom: 0;
+.segment > :last-child {
+    margin-bottom: 0;
 }
     /*/////////////////////////////////////////////////////////////*/
     /* IMGS */
