--- a/v2/index.html
+++ b/v2/index.html
@@ -1038,19 +1038,19 @@ padding-right: 0;
         <h4>Showcase</h4>
         <div id="initial-experience" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/v2/casestudies/initial-experience/" class="fade-link">Optimizing the Initial Experience <!--span>Case Study <span class="icn material-icons">chevron_right</span></span--></a></h3>
-            <a href="https://peteroper.github.io/portfolio/v2/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" class="fade-link img"></a>
+            <a href="https://peteroper.github.io/portfolio/v2/casestudies/initial-experience/" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.png);" class="fade-link img"></a>
         </div>
         <!--div id="content-navigation" class="segment">
             <h3><a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="fade-link">Enhancing Content Browsing</a></h3>
             <a href="https://peteroper.github.io/portfolio/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy2.1.png);"></a>
         </div-->
         <div id="adventurecards" class="segment">
-            <h3>Enhancing Information Architecture</h3>
-            <a href="https://peteroper.github.io/portfolio/v2/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.2.jpg);"></a> 
+            <h3><a href="https://peteroper.github.io/portfolio/v2/casestudies/adventurecards/">Refining Information Architecture</a></h3>
+            <a href="https://peteroper.github.io/portfolio/v2/casestudies/adventurecards/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase2.png);"></a> 
         </div>
         <div id="pulse-football" class="segment">
-            <h3>Conceptual Football App</h3>
-            <a href="https://peteroper.github.io/portfolio/v2/casestudies/initial-experience/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.1.jpg);"></a>
+            <h3><a href="https://peteroper.github.io/portfolio/v2/casestudies/pulse-football/">Conceptual Football App</a></h3>
+            <a href="https://peteroper.github.io/portfolio/v2/casestudies/pulse-football/" class="img fade-link" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase3.png);"></a>
         </div>
     </div>
     <!-- showcase ends -->
