--- a/v2/casestudies/pulse-football/index.html
+++ b/v2/casestudies/pulse-football/index.html
@@ -1,6 +1,6 @@
 <html> 
 <head>
-<title>Initial Experience Case Study | Peter Roper Product Designer</title>
+<title>Pulse Football Showcase | Peter Roper Product Designer</title>
 <meta name="viewport" content="width=device-width,	 initial-scale=1.0">
 <meta http-equiv="content-Type" content="text/html; charset=utf-8">
 <meta name="robots" content="noindex, nofollow" />
@@ -840,39 +840,34 @@ padding: 16px;
     
 <!-- Overview -->
 <div id="overview" class="section">
-    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase1.png);"></span>
-    <h2>Optimizing the Initial Experience</h2>
+    <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/showcase3.png);"></span>
+    <h2>Pulse Football</h2>
         <div id="project" class="segment">
-            <p>I work as a Senior UX Designer for the au Tsukasapo project. One of my tasks is to lead upstream concept design creation by synthesising research insights and converting into prototypes for Road Map and Backlog items.</p>
+            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO.</p>
             <ul>
                 <li>
                     <h4>Role</h4>
-                    <p>Senior UX Designer</p>
+                    <p>Lead UX Designer</p>
                 </li>
                 <li>
                     <h4>Duration</h4>
-                    <p>June 2021 ~ Present</p>
+                    <p>OOOO</p>
                 </li>
                 <li>
                     <h4>Team</h4>
-                    <span class="member">UX</span>
-                    <span class="member">UX</span>
-                    <span class="member">UX</span>
-                    <span class="member">UX</span>
-                    <span class="member">UX</span>
                     <span class="member">UX</span>
                 </li>
             </ul>
         </div>
         <div id="product" class="segment">
             <h4>Product</h4>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
-            <p>The Tsukasapo app is a premium tech support & solutions subscription service provided as part of a broader device protection plan for au customers (KDDI). </p>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy.png);" ></span>
+            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
         <div id="context" class="segment">
             <h4>Context</h4>
-            <span class="img v1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.2.png);" ></span>
-            <p>Senior and Low literacy users account for x% of the .</p>
+            <span class="img v1" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy.png);" ></span>
+            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
     </div>
     <!-- Overview END -->
@@ -881,22 +876,22 @@ padding: 16px;
      <div id="definition" class="section">
         <div id="problem" class="segment">
             <h4>Problem</h4>
-            <p>The Tsukasapo service has over 4million paid subsribers however less than 50% of customers have progressed beyond the tsukasapo apps provisioning flow and a further drop in active users is seen after day 1 viewing is completed.</p>
+            <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
         <div id="pain-points" class="segment">
             <h4>Pain Points</h4>
             <ol>
                 <li>
-                    <h3>Value Proposition</h3>
-                    <p>The apps value proposition is not clear to users.</p>
+                    <h3>OOOO OOOO OOO OO</h3>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
                 </li>
                 <li>
-                    <h3>Long Provisioning</h3>
-                    <p>Provisioning has many steps which require high level of user comprehension.</p>
+                    <h3>OOOO OOOO OOO OO</h3>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
                 </li>
                 <li>
                     <h3>User Comprehension</h3>
-                    <p>App UI is text rich and requires high level of user comprehension.</p>
+                    <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
                 </li>
             </ol>
         </div>
@@ -906,33 +901,33 @@ padding: 16px;
             <h4>Success Metrics</h4>
             <ul>
                 <li>
-                    <h3>Provisioning KPI</h3>
+                    <h3>OOOO OOOO OOO</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>Return User KPI</h3>
+                    <h3>OOOO OOOO OOO</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>User Notification Permission</h3>
+                    <h3>OOOO OOOO OOO</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
                 <li>
-                    <h3>Interestes Completion</h3>
+                    <h3>OOOO OOOO OOO</h3>
                     <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO</p>
                 </li>
             </ul>
         </div>
         <div id="final-design" class="segment">
             <h4>Final Design</h4>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy.png);" ></span>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
     </div>
     <!-- Definition END -->
 
      <!-- Synthesis-->
-     <div id="synthesis" class="section">
+     <!--div id="synthesis" class="section">
         <div id="research" class="segment special">
             <h4>Research</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
@@ -974,11 +969,11 @@ padding: 16px;
             <h4>Hypothesis</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
-    </div>
+    </div-->
     <!-- Synthesis END -->
 
      <!-- Discovery -->
-     <div id="discovery" class="section">
+     <!--div id="discovery" class="section">
         <div id="concept-design" class="segment">
             <h4>Concept Design</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
@@ -991,11 +986,11 @@ padding: 16px;
             <h4>Decisions</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
-    </div>
+    </div-->
     <!-- Discovery END -->
 
      <!-- Design -->
-     <div id="design" class="section">
+     <!--div id="design" class="section">
         <div id="Prototyping" class="segment">
             <h4>Prototyping</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
@@ -1012,11 +1007,11 @@ padding: 16px;
             <h4>Refinement</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
-    </div>
+    </div-->
     <!-- Design END -->
 
     <!-- Development -->
-    <div id="development" class="section">
+    <!--div id="development" class="section">
 
         <div id="design-handoff" class="segment">
             <h4>Design Handoff</h4>
@@ -1026,11 +1021,11 @@ padding: 16px;
             <h4>Design System</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
-    </div>
+    </div-->
     <!-- Development END -->
 
     <!-- Summary -->
-    <div id="summary" class="section">
+    <!--div id="summary" class="section">
         <div id="outcomes" class="segment special v1 v2">
             <h4>Outcomes</h4>
             <ul>
@@ -1056,7 +1051,7 @@ padding: 16px;
             <h4>Summary</h4>
             <p>OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO OOOO OOOO OOO OO OOOOO.</p>
         </div>
-    </div>
+    </div-->
     <!-- Summary END -->
 
 </div>
