--- a/v2/about.html
+++ b/v2/about.html
@@ -904,16 +904,10 @@ display: none;
 <div class="body">
     <div id="intro" class="section">
         <div class="segment">
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar.png);"></span>
             <h2>A Cultural blend of British &amp; Japanese.</h2>
-            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life living, working and raising a family in Japan.</p>
-            <p>For the last 3 years I have been furthering my skills as a UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
-            <div class="gallery-container">
-                <div class="gallery">
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
-              </div>
-            </div>
+            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing products and raising a family in Japan.</p>
+            <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
         </div>
         <div id="experience" class="segment">
             <h4>Experience</h4>
@@ -923,6 +917,13 @@ display: none;
 
         <div id="interests" class="segment">
             <h4>Interests</h4>
+            <div class="gallery-container">
+                <div class="gallery">
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+              </div>
+            </div>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
         </div>
     </div>
