--- a/v2/about.html
+++ b/v2/about.html
@@ -904,7 +904,7 @@ display: none;
 <div class="body">
     <div id="intro" class="section">
         <div class="segment">
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar.png);"></span>
+            <!--span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/avatar.png);"></span-->
             <h2>A Cultural blend of British &amp; Japanese.</h2>
             <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing products and raising a family in Japan.</p>
             <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
