--- a/v2/about.html
+++ b/v2/about.html
@@ -894,7 +894,7 @@ display: none;
         <h1>Peter Roper</h1>
     </a>
     <nav class="about links">
-        <a href="https://peteroper.github.io/portfolio/v2/about.html" class="fade-link selected">About</a>
+        <a href="https://peteroper.github.io/portfolio/v2/about.html" class="fade-link">About</a>
         <a href="https://peteroper.github.io/portfolio/assets/resume/peterroper_resume20072023.pdf" target="_blank">Resume</a>
     </nav>
 </div></div>
