--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -666,7 +666,7 @@ display: none!important;
 padding: 0 40px;
 }
 .container{
-padding: 40px;
+padding: 56% 40px 40px 40px;
 flex-direction: column;
 }
 .body{
@@ -692,10 +692,13 @@ color: #FFF;
 #titlebar nav a{
     color: #FFF;
 }
+.body{
+padding-top: 80px;
+}
 /*/////////////////////////////////////////////////////////////*/
 #overview > .img{
 position: absolute;
-top: 0;
+top: 56px;
 left: 0;
 right: 0;
 }
@@ -710,9 +713,6 @@ padding: 56% 20px 68px 20px;
 }
 #titlebar{
 padding: 0 20px;
-}
-.body{
-padding-top: 24px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
