--- a/v2/casestudies/pulse-football/index.html
+++ b/v2/casestudies/pulse-football/index.html
@@ -666,11 +666,12 @@ display: none!important;
 padding: 0 40px;
 }
 .container{
-padding: 40px;
+padding: 56% 40px 40px 40px;
 flex-direction: column;
 }
 .body{
 width: 100%;
+padding-top: 80px;
 }
 .navi .back{
 background-color: #346672;
@@ -695,7 +696,7 @@ color: #FFF;
 /*/////////////////////////////////////////////////////////////*/
 #overview > .img{
 position: absolute;
-top: 0;
+top: 56px;
 left: 0;
 right: 0;
 }
@@ -710,9 +711,6 @@ padding: 56% 20px 68px 20px;
 }
 #titlebar{
 padding: 0 20px;
-}
-.body{
-padding-top: 24px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #titlebar{
