--- a/v2/casestudies/pulse-football/index.html
+++ b/v2/casestudies/pulse-football/index.html
@@ -6,8 +6,9 @@
 <meta name="robots" content="noindex, nofollow" />
 <meta name="google-site-verification" content="gdAK0KN1Yy7jAIyafcJnFagF6wj12OobQYi8jAIlgMM" />
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-<link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'>
+<!--link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'-->
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&display=swap" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
 <meta name="theme-color" content="#346672">
 <link rel="apple-touch-icon" href="https://peteroper.github.io/portfolio/assets/imgs/icon-apple.jpg">
