--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -693,6 +693,7 @@ padding-top: 80px;
 }
 /*/////////////////////////////////////////////////////////////*/
 #overview > .img{
+border-radius: 0;
 position: absolute;
 top: 56px;
 left: 0;
