--- a/v2/casestudies/adventurecards/index.html
+++ b/v2/casestudies/adventurecards/index.html
@@ -689,12 +689,9 @@ line-height: 48px;
 font-size: 24px;
 color: #FFF;
 }
-#titlebar div a,
-#titlebar nav a{
-    color: #FFF;
-}
 /*/////////////////////////////////////////////////////////////*/
 #overview > .img{
+    border-radius: 0;
 position: absolute;
 top: 56px;
 left: 0;
