--- a/v2/index.html
+++ b/v2/index.html
@@ -9,6 +9,7 @@
 <!--link href='https://fonts.googleapis.com/css?family=Merriweather' rel='stylesheet'-->
 <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet'>
 <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@1,700&family=Merriweather:ital,wght@1,900&display=swap" rel="stylesheet">
 <!--link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'-->
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@800&display=swap" rel="stylesheet">
 <meta name="theme-color" content="#346672">
