--- a/v2/casestudies/adventurecards/index.html
+++ b/v2/casestudies/adventurecards/index.html
@@ -666,7 +666,7 @@ display: none!important;
 padding: 0 40px;
 }
 .container{
-padding: 56% 40px 40px 40px;
+padding: 104 40px 40px 40px;
 flex-direction: column;
 }
 .body{
@@ -690,21 +690,13 @@ font-size: 24px;
 color: #FFF;
 }
 /*/////////////////////////////////////////////////////////////*/
-#overview > .img{
-    border-radius: 0;
-position: absolute;
-top: 56px;
-left: 0;
-right: 0;
-}
-/*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
 /* SM TABLETS */
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 768px) {
 .container{
-padding: 56% 20px 68px 20px;
+padding: 68px 20px 68px 20px;
 }
 #titlebar{
 padding: 0 20px;
