--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -666,7 +666,7 @@ display: none!important;
 padding: 0 40px;
 }
 .container{
-padding: 56% 40px 40px 40px;
+padding: 104px 40px 40px 40px;
 flex-direction: column;
 }
 .body{
@@ -688,17 +688,6 @@ line-height: 48px;
 font-size: 24px;
 color: #FFF;
 }
-.body{
-padding-top: 80px;
-}
-/*/////////////////////////////////////////////////////////////*/
-#overview > .img{
-border-radius: 0;
-position: absolute;
-top: 56px;
-left: 0;
-right: 0;
-}
 /*/////////////////////////////////////////////////////////////*/
 }
 /*/////////////////////////////////////////////////////////////*/
@@ -706,7 +695,7 @@ right: 0;
 /*/////////////////////////////////////////////////////////////*/
 @media only screen and (max-width: 768px) {
 .container{
-padding: 56% 20px 68px 20px;
+padding: 68px 20px 68px 20px;
 }
 #titlebar{
 padding: 0 20px;
