--- a/v2/about.html
+++ b/v2/about.html
@@ -175,7 +175,7 @@ font-weight: 700;
     text-rendering: optimizeLegibility;
     }
     }
-    #intro h2{ font-size: 3.2em; line-height: 125%; }
+    #intro h2{ font-size: 3.2em; line-height: 125%; letter-spacing: -0.5pt; }
     h1,h2, h3,h4{
     line-height: 140%; 
     }
