--- a/v2/index.html
+++ b/v2/index.html
@@ -174,7 +174,7 @@ font-size: 9.5px;
 text-rendering: optimizeLegibility;
 }
 }
-#intro h2{ font-size: 4.2em; }
+#intro h2{ font-size: 4.2em; letter-spacing: -0.5pt; }
 h1,h2, h3,h4{
 line-height: 140%; 
 }
