--- a/v2/about.html
+++ b/v2/about.html
@@ -906,7 +906,7 @@ display: none;
         <div class="segment">
             <h2>A Cultural blend of British &amp; Japanese.</h2>
             <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising a family in Japan.</p>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.png);"></span>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span>
             <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
         </div>
         <div id="experience" class="segment">
