--- a/v2/about.html
+++ b/v2/about.html
@@ -904,7 +904,7 @@ display: none;
 <div class="body">
     <div id="intro" class="section">
         <div class="segment">
-            <h2>A Cultural blend of British &amp; Japanese.</h2>
+            <h2>A cultural blend of British &amp; Japanese influences.</h2>
             <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising a family in Japan.</p>
             <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span>
             <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
@@ -929,14 +929,34 @@ display: none;
     </div>
     <div id="skills" class="section">
         <div id="design-skills" class="segment">
-            <h4>Design Skills</h4>
+            <h4>Skills</h4>
             <ul>
-                <li>UI Design</li>
-                <li>UX Research</li>
-                <li>Design System</li>
-                <li>Continous Improvement</li>
+                <li>UI/UX</li>
+                <li>User Research</li>
+                <li>Usability Testing</li>
+                <li>Prototyping</li>
+                <li>Wireframing</li>
+                <li>Design Systems</li>
+                <li>Guidelines & Documentation</li>
+                <li>Accesibility</li>
                 <li>Design Thinking</li>
                 <li>Principles & Rules</li>
+                <li>Advocating Design</li>
+                <li>Branding</li>
+                <li>Illustration</li>
+                <li>Animations</li>
+                <li>Video Editting</li>
+            </ul>
+        </div>
+        <div id="design-skills" class="segment">
+            <h4>Design Skills</h4>
+            <ul>
+                <li>Figma</li>
+                <li>Illustrator</li>
+                <li>After Effects</li>
+                <li>Premiere</li>
+                <li>Photoshop</li>
+                <li>Notion</li>
             </ul>
         </div>
         <div id="product-skills" class="segment">
@@ -944,23 +964,36 @@ display: none;
             <ul>
                 <li>Product Ownership</li>
                 <li>Continous Improvement</li>
-                <li>Responsive Web.</li>
-                <li>App Design</li>
-                <li>CMS & Admin Tools</li>
+                <li>Agile Sprints</li>
                 <li>Analytics</li>
             </ul>
         </div>
         <div id="dev-skills" class="segment">
             <h4>Development Skills</h4>
             <ul>
+                <li>Frontend Dev</li>
                 <li>CSS</li>
                 <li>HTML</li>
                 <li>JS</li>
                 <li>SASS</li>
                 <li>Web. Optimization</li>
                 <li>SEO</li>
-                <li>SASS</li>
-                <li>SASS</li>
+                <li>PHP</li>
+                <li>SQL</li>
+                <li>Git</li>
+            </ul>
+        </div>
+        <div id="dev-skills" class="segment">
+            <h4>Platform Experience</h4>
+            <ul>
+                <li>App Design</li>
+                <li>Responsive Web.</li>
+                <li>CMS & Admin Tools</li>
+                <li>Wordpress</li>
+                <li>HTML Emails</li>
+                <li>Printed Media</li>
+                <li>B2C</li>
+                <li>B2B</li>
             </ul>
         </div>
         <div id="matrix" class="segment">
