--- a/v2/about.html
+++ b/v2/about.html
@@ -928,7 +928,12 @@ display: none;
         </div>
     </div>
     <div id="skills" class="section">
-        <div id="design-skills" class="segment">
+        <div id="matrix" class="segment">
+            <h4>UX Skill Matrix</h4>
+            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
+            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
+        </div>
+        <div id="general-skills" class="segment">
             <h4>Skills</h4>
             <ul>
                 <li>UI/UX</li>
@@ -995,11 +1000,6 @@ display: none;
                 <li>B2C</li>
                 <li>B2B</li>
             </ul>
-        </div>
-        <div id="matrix" class="segment">
-            <h4>UX Skill Matrix</h4>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about1.1.png);"></span>
-            <!--p>Working at Asurion has given me the opportunity to refine the design and development experience I had gained over the previous 10 years and understand its application within a corporate environment.</p-->
         </div>
     </div>
     <!--div id="about" class="section">
