--- a/v2/about.html
+++ b/v2/about.html
@@ -734,6 +734,9 @@ align-items: center;
     .special.v2 ul li{
     width: calc(33% - 50px); /* Adjust the width as needed */
     }
+    #intro .wrap{
+        max-width: 480px;
+    }
     /*/////////////////////////////////////////////////////////////*/
     }
 /*/////////////////////////////////////////////////////////////*/
@@ -906,7 +909,7 @@ display: none;
         <div class="segment">
             <h2>A cultural blend of British &amp; Japanese influences.</h2>
             <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising a family in Japan.</p>
-            <span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span>
+            <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span></span>
             <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
         </div>
         <div id="experience" class="segment">
