--- a/v2/about.html
+++ b/v2/about.html
@@ -922,9 +922,9 @@ display: none;
             <h4>Interests</h4>
             <div class="gallery-container">
                 <div class="gallery">
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
-                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/casestudies/casestudy1.1.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about2.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about3.png);" ></span></span>
+                    <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about4.png);" ></span></span>
               </div>
             </div>
             <p>Many of my hobbies are outlets for creative problem solving and have parallels with product development. I enjoy long term projects like gardening and interior design which focus on planning, composition and adapting to changing circumstances. Recently I have been enjoying cooking and craft beers and would like to try to make my own ales!</p>
