--- a/v2/about.html
+++ b/v2/about.html
@@ -908,7 +908,7 @@ display: none;
     <div id="intro" class="section">
         <div class="segment">
             <h2>A cultural blend of British &amp; Japanese influences.</h2>
-            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising a family in Japan.</p>
+            <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising my family in Japan.</p>
             <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span></span>
             <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
         </div>
