--- a/v2/about.html
+++ b/v2/about.html
@@ -735,7 +735,11 @@ align-items: center;
     width: calc(33% - 50px); /* Adjust the width as needed */
     }
     #intro .wrap{
-        max-width: 480px;
+        display: block;
+    width: 480px;
+    }
+    #intro .wrap .img{
+    margin: 0 auto;
     }
     /*/////////////////////////////////////////////////////////////*/
     }
