--- a/v2/about.html
+++ b/v2/about.html
@@ -914,12 +914,13 @@ display: none;
             <h2>A cultural blend of British &amp; Japanese influences.</h2>
             <p class="l">Originally from Yorkshire, England. I have spent the second half of my life designing & developing products whilst raising my family in Japan.</p>
             <span class="wrap"><span class="img" style="background-image: url(https://peteroper.github.io/portfolio/assets/imgs/about.jpg);"></span></span>
-            <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. </p>
+            <p>For the last 3 years I have been furthering my skills as a Senior UX Designer at Asurion Japan, a US multinational device protection and tech-support provider. In this role I have acted as a lead and mentor within a team of 10-15 designers and researchers.</p>
         </div>
         <div id="experience" class="segment">
             <h4>Experience</h4>
-            <p>Over the past two years, I have worked on Asurion’s flagship product, an au support application for KDDI. Previous responsibilities at Asurion saw me lead the design tasks for CMS, Admin tools and Chat Systems. In addition to supporting the localization of the companies photo storage app.</p>
-            <p>As a senior designer within Asurion Japan's UX team, I have been part of a group of 10~15 designers and researchers who operate within the product development department.</p>
+            <p>Most recently I have been one of the lead designers for Asurion’s flagship product, the au Tsukasapo app for KDDI. </p>
+            <p>Previous responsibilities at Asurion saw me support the localization of the au Photo Cloud app from a US codebase. Whilst also leading ongoing design tasks for Chat Systems, CMS, and Admin tools.</p>
+            <p>Prior to joining Asurion I worked as both a Product Designer and Front End Developer at a bookings organization for a 10 year period.</p>
         </div>
 
         <div id="interests" class="segment">
