--- a/v2/test.html
+++ b/v2/test.html
@@ -58,6 +58,11 @@ width: 148px;
 .body{
 width: 768px;
 }
+
+.segment{
+    min-height: 400px;
+    background-color: #eee;
+}
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
 /*/////////////////////////////////////////////////////////////*/
