--- a/v2/test.html
+++ b/v2/test.html
@@ -62,6 +62,7 @@ width: 768px;
 .segment{
     min-height: 400px;
     background-color: #eee;
+    border-bottom: red 10px solid;
 }
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
