--- a/v2/test.html
+++ b/v2/test.html
@@ -69,6 +69,8 @@ width: 768px;
 /*/////////////////////////////////////////////////////////////*/
 .navi nav{
     margin-bottom: 12px;
+    position: fixed;
+    top: 0;
 }
 .navi nav a{
     text-decoration: none;
