--- a/v2/test.html
+++ b/v2/test.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script>
   const navs = document.querySelectorAll('.navi nav');
     const navLinks = document.querySelectorAll('.navi a');
