--- a/v2/test.html
+++ b/v2/test.html
@@ -68,10 +68,12 @@ width: 768px;
 /*/////////////////////////////////////////////////////////////*/
 /* NAVI */
 /*/////////////////////////////////////////////////////////////*/
-.navi nav{
-    margin-bottom: 12px;
+.navi{
     position: fixed;
     top: 0;
+}
+.navi nav{
+    margin-bottom: 12px;
 }
 .navi nav a{
     text-decoration: none;
@@ -93,7 +95,7 @@ width: 768px;
     display: inline-block;
 }
 .navi .back:hover{
-    text-decoration none!important;
+    text-decoration: none!important;
 }
 .navi .back .icn{
     width: 36px;
