--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -157,6 +157,17 @@ document.addEventListener("DOMContentLoaded", function () {
         }
       }
     });
+    /* NAV LINKS *////////////////////////////////////////////
+    navLinks.click(function(e) {
+    e.preventDefault();
+    const targetId = $(this).attr('href').slice(1);
+    const targetElement = $('#' + targetId);
+    if (targetElement.length) {
+      $('html, body').animate({
+        scrollTop: targetElement.offset().top
+      }, 500);
+    }
+  });
   });
 
 
