--- a/v2/casestudies/initial-experience/index.html
+++ b/v2/casestudies/initial-experience/index.html
@@ -75,8 +75,10 @@ document.addEventListener("DOMContentLoaded", function () {
       stickyElement.removeClass('sticky');
     }
     });
-    /* NAVI *////////////////////////////////////////////
-  const navs = $('.navi nav');
+
+});
+$(document).ready(function() {
+const navs = $('.navi nav');
   const navLinks = $('.navi a');
   const sections = $('.section');
   const segments = $('.segment');
@@ -84,24 +86,6 @@ document.addEventListener("DOMContentLoaded", function () {
 
   $(window).scroll(function() {
     const scrollTop = $(window).scrollTop();
-
-    segments.each(function() {
-      var segmentTop = $(this).offset().top;
-
-      if (scrollTop >= segmentTop - offsetValue) {
-        var segmentId = $(this).attr('id');
-
-        if (!navLinks.filter('[href="#' + segmentId + '"]').hasClass('selected')) {
-          navLinks.removeClass('selected');
-          navLinks.filter('[href="#' + segmentId + '"]').addClass('selected');
-        }
-
-        if (!navLinks.filter('[href="#' + segmentId + '"]').parent().hasClass('selected')) {
-          navs.removeClass('selected');
-          navLinks.filter('[href="#' + segmentId + '"]').parent().addClass('selected');
-        }
-      }
-    });
 
     sections.each(function() {
       var sectionTop = $(this).offset().top;
@@ -120,6 +104,24 @@ document.addEventListener("DOMContentLoaded", function () {
         }
       }
     });
+
+    segments.each(function() {
+      var segmentTop = $(this).offset().top;
+
+      if (scrollTop >= segmentTop - offsetValue) {
+        var segmentId = $(this).attr('id');
+
+        if (!navLinks.filter('[href="#' + segmentId + '"]').hasClass('selected')) {
+          navLinks.removeClass('selected');
+          navLinks.filter('[href="#' + segmentId + '"]').addClass('selected');
+        }
+
+        if (!navLinks.filter('[href="#' + segmentId + '"]').parent().hasClass('selected')) {
+          navs.removeClass('selected');
+          navLinks.filter('[href="#' + segmentId + '"]').parent().addClass('selected');
+        }
+      }
+    });
   });
 
   navLinks.click(function(e) {
@@ -132,8 +134,6 @@ document.addEventListener("DOMContentLoaded", function () {
       }, 500);
     }
   });
-
-
 });
 </script>
 <!-- STYLE CSS-->
